добавил Манга таб и пейджер.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,25 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
-    app:startDestination="@id/kitsuFragment">
+    app:startDestination="@id/pagerFragment">
 
     <fragment
-        android:id="@+id/kitsuFragment"
-        android:name="com.example.dz_1_6kitsu.ui.fragments.main.AnimeFragment"
-        android:label="fragment_kitsu"
-        tools:layout="@layout/fragment_anime" >
-        <action
-            android:id="@+id/action_kitsuFragment_to_detailAnimeFragment"
-            app:destination="@id/detailAnimeFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/detailAnimeFragment"
-        android:name="com.example.dz_1_6kitsu.ui.fragments.detail.DetailAnimeFragment"
+        android:name="com.example.dz_1_6kitsu.ui.fragments.anime.detail.DetailAnimeFragment"
         android:label="fragment_detail_anime"
         tools:layout="@layout/fragment_detail_anime" >
         <argument
             android:name="id"
             app:argType="integer"
             android:defaultValue="0" />
+    </fragment>
+    <fragment
+        android:id="@+id/mangaDetailFragment"
+        android:name="com.example.dz_1_6kitsu.ui.fragments.manga.detail.MangaDetailFragment"
+        android:label="MangaDetailFragment" >
+        <argument
+            android:name="id"
+            app:argType="integer"
+            android:defaultValue="0" />
+    </fragment>
+    <fragment
+        android:id="@+id/pagerFragment"
+        android:name="com.example.dz_1_6kitsu.ui.fragments.pager.PagerFragment"
+        android:label="fragment_pager"
+        tools:layout="@layout/fragment_pager" >
+        <action
+            android:id="@+id/action_pagerFragment_to_detailAnimeFragment"
+            app:destination="@id/detailAnimeFragment" />
+        <action
+            android:id="@+id/action_pagerFragment_to_mangaDetailFragment"
+            app:destination="@id/mangaDetailFragment" />
     </fragment>
 </navigation>
