--- a/app/src/main/res/layout/fragment_manga_detail.xml
+++ b/app/src/main/res/layout/fragment_manga_detail.xml
@@ -6,12 +6,12 @@
     tools:context=".ui.fragments.anime.detail.DetailAnimeFragment">
 
     <ImageView
-        android:id="@+id/iv_poster"
+        android:id="@+id/iv_poster_manga"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_name_manga"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
