--- a/app/src/main/res/layout/fragment_anime.xml
+++ b/app/src/main/res/layout/fragment_anime.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:background="@color/black"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.main.AnimeFragment">
+    tools:context=".ui.fragments.anime.AnimeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/rv_anime"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
