--- a/app/src/main/res/layout/fragment_detail_anime.xml
+++ b/app/src/main/res/layout/fragment_detail_anime.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.detail.DetailAnimeFragment">
+    tools:context=".ui.fragments.anime.detail.DetailAnimeFragment">
 
     <ImageView
         android:id="@+id/iv_poster"
