--- a/app/src/main/res/layout/fragment_manga_detail.xml
+++ b/app/src/main/res/layout/fragment_manga_detail.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.anime.detail.DetailAnimeFragment">
+    android:background="@color/black"
+    tools:context=".ui.fragments.manga.detail.MangaDetailFragment">
 
     <ImageView
         android:id="@+id/iv_poster_manga"
